docs(pages): 更新关于页面的内容分类描述
将"深度技术笔记"修改为更通用的"技术学习笔记"，使分类描述更准确。

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -42,7 +42,7 @@ const recentPosts = sortedPosts.filter(({ data }) => !data.featured);
         <span class="sr-only">RSS Feed</span>
       </a>
 
-      <p class="mt-2">你好，我是 <i>Archie.Z</i>，一名从电子信息工程蹒跚步入软件世界的探索者。</p>
+      <p class="mt-2">Hello，这里是 <i>Archie</i>，一名从电子信息工程蹒跚步入软件世界的探索者。</p>
 
       <p class="mt-4">
         我曾深陷技术选择的焦虑与职业路径的迷茫。建立这个博客，是为了锚定思考，记录如何用<b>工科的逻辑</b>去理解<b>代码的世界</b>，用<b>哲学的思辨</b>去解构<b>游戏的乐趣</b>。 
